--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,10 @@ logging:
 spring:
   messages:
     basename: messages
+
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
